	  enable_mouse_support() and get_mouseinput(). (DLR)
- browser.c:
  do_browser()
	- Refactor the mouse support, modeling it after do_mouse() for
	  consistency. (DLR)
	- Remove unneeded call to blank_edit(). (DLR)
	- After entering "..", select the directory we were in before
	  instead of the first filename in the list, as Pico does. (DLR)
	- Simplify screen update handling and exiting. (DLR)
  browser_init()
	- Fix off-by-one error when calculating longest that kept the
	  rightmost column of the screen from being used. (DLR)
	- Calculate width here instead of in browser_refresh(), as it's
	  more consistent. (DLR)
  browser_refresh()
	- Simplify. (DLR)
	- Fix problems where translated versions of "(dir)" could be
	  truncated, and where file sizes could be too long. (DLR)
	- For the ".." entry, display "(parent dir)" instead of "(dir)",
	  as Pico does. (DLR)
	- If a filename is too long, truncate it and display an ellipsis
	  before it, as titlebar() does. (DLR)
	- Add translator comments explaining the maximum intended
	  lengths of "(dir)" and "(parent dir)". (DLR)
	- Fix problem where width wouldn't be properly initialized if
	  the file list took up one line or less. (DLR)
  browser_select_filename()
	- New function, used to select a specific filename in the list.
	  (DLR)
  findnextfile()
	- Simplify the uses of tail(). (DLR)
  striponedir()
	- Since all the strings passed to this are dynamically
	  allocated, use null_at() to strip the directory from the
	  string.  Also, return the stripped path instead of modifying
	  path. (DLR)
- help.c:
  do_help()
	- Simplify screen update handling and exiting. (DLR)
- doc/syntax/c.nanorc:
	- Since .i and .ii are preprocessed C and C++ output, colorize
	  them here. (Mike Frysinger)
- doc/syntax/ruby.nanorc:
	- Add missing blank line after the first comment, for
	  consistency. (DLR)

GNU nano 1.3.12 - 2006.06.26
- General:
	- Miscellaneous comment fixes. (DLR)